gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19923.d
version https://git-lfs.github.com/spec/v1
oid sha256:e17d0c83db50c41903bc6db3e78c9fd1f0faa0a9f2a7a05b983353e305b2c1ef
size 234
